resolve warnings